# route53-utils

./: Cargo.toml  README.md  build-static.sh
src/: main.rs  update_record.rs  wait_for_change.rs
