[package]
name = "route53-util"
version = "0.1.0"
authors = ["Adam Batkin <adam@batkin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
anyhow = "1.0.25"
rusoto_route53 = { version = "0.42.0", features = ["rustls"], default-features = false }
rusoto_credential = "0.42.0"
rusoto_core = { version = "0.42.0", features = ["rustls"], default-features = false }
